# putney-mit-technology-camp

./: .gitmodules  INSTRUCTORS.md  README.md  pyproject.toml
assets/data-modeling/: IMAGE_CREDITS.md
assets/neural-networks/: IMAGE_CREDITS.md
assets/what-is-ai/: IMAGE_CREDITS.md
docs/: README.md  _config.yml  index.md  raspberry-pi-connect-to-wifi-via-terminal.md  raspberry-pi-setup.md
docs/public/raspberry-pi-setup/: braincraft-camera-cable-slot.xcf
notebooks/: Data_Modeling.ipynb  Image_Classifier.ipynb  Neural_Networks.ipynb  Python Basics.ipynb  Website Basics.ipynb  What is AI.ipynb
raspberry-pi/: README.md
raspberry-pi/files/: config.txt
raspberry-pi/files/avahi-services/: jupyterlab.service  ttyd.service  vnc.service
raspberry-pi/files/display-driver-install/: install.sh  pyproject.toml
raspberry-pi/files/notebooks/: pyproject.toml
scripts/: format-notebooks.sh
